--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>SpaceWalkers</title>
 
@@ -20,8 +21,19 @@
 
   <div class="container home">
 
+    <div class="nav-section">
+      <h1>SpaceWalkers</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Sign In</a>
+      </nav>
+    </div>
+
     <header class="intro">
-       <!-- image code here -->
+       <img src="img/main-header.png" alt="Main header Picture">
 
       <h2>Lift Off</h2>
     
