--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <header class="intro">
-       <img src="img/main-header.png" alt="Main header Picture">
+       <img src="img/main-header.png" class="main-picture" alt="Main header Picture">
 
       <h2>Lift Off</h2>
     
@@ -44,6 +44,7 @@
         <img src="img/blast.png" class="blast" alt="Rocket blasting off">
         <img src="img/sky.png" class="sky" alt="Space sky image">
         <img src="img/launch.png" class="launch" alt="Launching rocket">
+      
     </section>
    
     <section class="visit-planets">
